--- a/client/src/ui/css/App.css
+++ b/client/src/ui/css/App.css
@@ -171,7 +171,7 @@
 
 /* Needed so that background is flush against bottom */
 .full-height {
-  min-height: 100vh;
+  height: 100%;
   background-color: #F4F9FE;
 }
 
